Fixes #147 - Resize line changes panel (#316)
* Updated package-lock

* Updated package-lock

* Revert "Updated package-lock"

This reverts commit 653046264e9c4174255d783c2e07a3f844e3f553.

* Revert "Updated package-lock"

This reverts commit 653046264e9c4174255d783c2e07a3f844e3f553.

* updated package-lock

* Increased width of line changes panel to view lines more easily.

* Resized height of diff-panel-body so line changes are not hidden behind the command console.

* Revert "Updated package-lock"

This reverts commit 653046264e9c4174255d783c2e07a3f844e3f553.

* Increased width of line changes panel to view lines more easily.

* Resized height of diff-panel-body so line changes are not hidden behind the command console.

* Revert "Updated package-lock"

This reverts commit 653046264e9c4174255d783c2e07a3f844e3f553.

* Increased width of line changes panel to view lines more easily.

* Resized height of diff-panel-body so line changes are not hidden behind the command console.

* Changed background colours of panels to remove white gaps.

* Adjusted sizing and position of body panel to fit the diff panel better.

* Changed layout of repo name and branch name to fit body panel better and added hover effect to see full names of both.

* Removed whitespace and unused settings in css.

* Revert "Updated package-lock"

This reverts commit 653046264e9c4174255d783c2e07a3f844e3f553.

* Increased width of line changes panel to view lines more easily.

* Resized height of diff-panel-body so line changes are not hidden behind the command console.

* Increased width of line changes panel to view lines more easily.

* Changed background colours of panels to remove white gaps.

* Adjusted sizing and position of body panel to fit the diff panel better.

* Changed layout of repo name and branch name to fit body panel better and added hover effect to see full names of both.

* Removed whitespace and unused settings in css.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -107,7 +107,10 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
+  position: fixed;
+  right: 0px;
+  left: 0px;
 }
 
 body .header {
@@ -136,6 +139,20 @@ body .navbar .dropdown-menu {
 body .navbar .dropdown-menu a {
   color: #000;
   overflow-x: auto;
+}
+
+#repo-name {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 200px;
+}
+
+#branch-name {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 200px;
 }
 
 body .navbar .fa-cloud-upload {
@@ -226,8 +243,10 @@ body .file-panel .commit-panel .commit-button:hover {
 
 body .body-panel {
   width: 80%;
+  height: 78vh;
   float: right;
   z-index: 0;
+  background-color: #181818;
 }
 
 body .body-panel .project-panel {
@@ -272,12 +291,13 @@ body .editor-component .input {
 body .body-panel .diff-panel {
   width: 0;
   height: 100%;
+  background-color: #282828;
   float: left;
 }
 
 body .body-panel .diff-panel .diff-panel-body {
   width: 100%;
-  height: 80vh;
+  height: 100%;
   float: left;
   background-color: #282828;
   color: #fff;
@@ -285,9 +305,10 @@ body .body-panel .diff-panel .diff-panel-body {
 }
 
 body .body-panel .diff-panel .diff-panel-body div {
-  padding: 1px 5px 1px 5px;
+  box-sizing: border-box;
   white-space: pre;
   font-family: monospace;
+  background-color: #282828;
 }
 
 body .body-panel .diff-panel .diff-panel-minimise:hover {
@@ -574,11 +595,9 @@ body .footer .git-command {
   width: 100%;
   background: whitesmoke;
   padding: 10px 12px;
-
   cursor: pointer;
   border: 1px solid lightgray;
   box-sizing: border-box;
-  
 }
 
 .dropdown-label, .dropdown-quantity {
@@ -722,5 +741,3 @@ div#listhere {
             -webkit-transform: rotate(-360deg);
           }
 }
-
-/* Splash Loading Animation End */
